# lil-speaker

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts  task.md
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/lilspeaker/features/chat/: ChatScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp
app/src/main/java/com/example/lilspeaker/: LilSpeakerApp.kt  MainActivity.kt
app/src/main/java/com/example/lilspeaker/core/logging/: AppLogger.kt
app/src/main/java/com/example/lilspeaker/features/assistant/: AssistantEvent.kt  AssistantSettings.kt  LocalAssistant.kt
app/src/main/java/com/example/lilspeaker/features/chat/: ChatMessage.kt  ChatUiState.kt  ChatViewModel.kt  MessageComposer.kt
app/src/main/java/com/example/lilspeaker/features/download/: ModelDownloadManager.kt
app/src/main/java/com/example/lilspeaker/features/llm/: ChatPromptFormatter.kt  LlamaBridge.kt  LlmGenerationRequest.kt  LocalLlmEngine.kt
app/src/main/java/com/example/lilspeaker/features/privacy/: PrivacySettingsRepository.kt
app/src/main/java/com/example/lilspeaker/features/tts/: KittenTtsEngine.kt  TokenSegmenter.kt  VoiceLibrary.kt  VoicePlaybackCoordinator.kt  VoiceProfile.kt  VoiceSelection.kt
app/src/main/java/com/example/lilspeaker/features/tts/frontend/: EnglishFrontEnd.kt  PhonemeEncoder.kt
app/src/main/java/com/example/lilspeaker/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/java/com/example/lilspeaker/features/tts/: EnglishFrontEndTest.kt  TokenSegmenterTest.kt
apps/app/: Cargo.toml
apps/app/src/: main.rs
crates/audio_io/: Cargo.toml
crates/audio_io/src/: lib.rs
crates/chat_ui/: Cargo.toml
crates/chat_ui/src/: lib.rs
crates/instrumentation/: Cargo.toml
crates/instrumentation/src/: lib.rs
crates/llm_core/: Cargo.toml
crates/llm_core/assets/: lfm2_prompt_corpus.txt
crates/llm_core/src/: lib.rs
crates/models_downloader/: Cargo.toml
crates/models_downloader/src/: lib.rs
crates/tts_core/: Cargo.toml
crates/tts_core/src/: lib.rs
docs/: ui_ux_guidelines.md
