[workspace]
members = [
    "apps/app",
    "crates/llm_core",
    "crates/models_downloader",
    "crates/tts_core",
    "crates/audio_io",
    "crates/chat_ui",
    "crates/instrumentation"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["Lil Speaker Team"]
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-channel = "1.9"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
dirs = "5.0"
futures = "0.3"
indicatif = "0.17"
lazy_static = "1.4"
log = "0.4"
once_cell = "1.19"
rand = "0.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
symphonia = { version = "0.5", features = ["wav"] }
thiserror = "1.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter", "time"] }
url = "2.5"
hound = "3.5"
tempfile = "3.10"
