[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
chrono = { workspace = true }
ctrlc = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
llm_core = { path = "../../crates/llm_core" }
models_downloader = { path = "../../crates/models_downloader" }
tts_core = { path = "../../crates/tts_core" }
audio_io = { path = "../../crates/audio_io" }
chat_ui = { path = "../../crates/chat_ui" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
instrumentation = { path = "../../crates/instrumentation" }
