[package]
name = "audio_io"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
symphonia = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
instrumentation = { path = "../instrumentation" }
hound = { workspace = true }
tts_core = { path = "../tts_core" }

[dev-dependencies]
tempfile = { workspace = true }
