[package]
name = "chat_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
instrumentation = { path = "../instrumentation" }
llm_core = { path = "../llm_core" }
tts_core = { path = "../tts_core" }
audio_io = { path = "../audio_io" }

[dev-dependencies]
tempfile = { workspace = true }
