[package]
name = "models_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
indicatif = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }
instrumentation = { path = "../instrumentation" }

[dev-dependencies]
httptest = "0.15"
tempfile = "3.10"
sha2 = { workspace = true }
