[package]
name = "tts_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
symphonia = { workspace = true }
instrumentation = { path = "../instrumentation" }
